--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   <h1>Coming SOON</h1> 
+    <div class="container">
+      <p>Damsgallery website is</p>
+      <h1>under</h1>
+      <h2>construction</h2>
+      <p>contact the <a target="_blank" href="https://wa.me/2348033382655">Developer</a></p>
+    </div> 
 </body>
 </html>
