--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container">
-      <p>Damsgallery website is</p>
+      <!-- <p>Damsgallery website is</p>
       <h1>under</h1>
-      <h2>construction</h2>
-      <p>contact the <a target="_blank" href="https://wa.me/2348033382655">Developer</a></p>
+      <h2>construction</h2> -->
     </div> 
+    <!-- <img src="./images/under-construction.jpg" alt=""> -->
 </body>
 </html>
